--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i&amp;subset=cyrillic" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.min.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -30,7 +30,7 @@
       <div class="header-middle">
         <p class="headline">Интернет-магазин строительных материалов и&nbsp;инструментов для ремонта</p>
         <div class="contacts">
-          <p class="contacts-phone"> +7 (812) 555-05-55</p>
+          <a href="#" class="contacts-phone"> +7 (812) 555-05-55</a>
           <p class="contacts-address">г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8</p>
         </div>
         <div class="user">
@@ -268,7 +268,7 @@
     </div>
     <section class="about-reformers">
       <div class="container">
-        <h2 class="about-reformers-headline">Пара слов о перефораторах</h2>
+        <h2 class="about-reformers-headline">Пара слов о перфораторах</h2>
         <p class="about-reformers-description">
           Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в
           кирпиче, бетоне и камне. <br>
@@ -284,17 +284,17 @@
     <div class="footer-top">
       <div class="container">
         <div class="footer-top-adress">
-          <a class="logo" href="#">
+          <a class="logo" href="index.html">
             <img width="138" height="23" src="./img/logo-footer.svg" alt="Логотип Техномарт">
           </a>
-          <p class="footer-contacts">г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8 <br>
-            +7 (812) 555-05-55</p>
+          <p class="footer-contacts">г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8</p>
+          <a href="#" class="footer-phone">+7 (812) 555-05-55</a>
         </div>
         <div class="footer-top-menu">
           <ul class="footer-menu">
             <li><a href="#">Компания</a></li>
             <li><a href="#">Новости</a></li>
-            <li><a href="#">Католог</a></li>
+            <li><a href="#">Каталог</a></li>
             <li><a href="#">Доставка</a></li>
             <li><a href="#">Контакты</a></li>
           </ul>
@@ -310,8 +310,8 @@
     <div class="footer-bottom">
       <div class="container">
         <div class="footer-bottom-copy">
-          <p>&copy; 2010-2019 Компания &laquo;Техномарт&raquo; <br>
-            Все права защищены</p>
+          <p>&copy; 2010-2019 Компания &laquo;Техномарт&raquo;<p>
+          <p>Все права защищены</p>
         </div>
         <div class="footer-bottom-social">
           <a class="social-button social-button-vk" href="#"><span class="visually-hidden">Вконтакте</span></a>
@@ -319,9 +319,9 @@
           <a class="social-button social-button-inst" href="#"><span class="visually-hidden">Инстаграм</span></a>
         </div>
         <div class="footer-bottom-feedback">
-          <p>Обратная связь: <br>
+          <p>Обратная связь:
             <a class="footer-yellow-name" href="#">mail@htmlacademy.ru</a></p>
-          <p>Разработано &#8212; <br>
+          <p>Разработано &#8212;
             <a class="footer-yellow-name" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
         </div>
       </div>
