--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i&amp;subset=cyrillic" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.min.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -30,7 +30,7 @@
       <div class="header-middle">
         <p class="headline">Интернет-магазин строительных материалов и&nbsp;инструментов для ремонта</p>
         <div class="contacts contacts-main">
-          <p class="contacts-phone"> +7 (812) 555-05-55</p>
+          <a href="#" class="contacts-phone"> +7 (812) 555-05-55</a>
           <p class="contacts-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         </div>
         <ul class="user-navigation">
@@ -216,26 +216,26 @@
           <ul class="services-list">
             <li class="services-item">
               <h3>Доставка</h3>
-              <p>
+              <p class="services-item-delivery">
                 Мы с удовольствием доставим ваш товар прямо<br>
-                к вашему подъезду совершенно бесплатно!<br>
+                к вашему подъезду совершенно бесплатно!
                 Ведь мы неплохо заработаем,<br>
                 поднимая его на ваш этаж!
               </p>
             </li>
             <li class="services-item">
               <h3>Гарантия</h3>
-              <p>
+              <p class="services-item-warranty">
                 Если купленный у нас товар поломается или заискрит,<br>
-                а также в случае пожара, спровоцированного его возгаранием,<br>
-                вы всегда можете быть уверены в нашей гарантии. Мы обменяем<br>
+                а также в случае пожара, спровоцированного его возгаранием,
+                вы всегда можете быть уверены в нашей гарантии. Мы обменяем
                 сгоревший товар на новый.<br>
                 Дом уж восстановите как-нибудь сами.
               </p>
             </li>
             <li class="services-item">
               <h3>Доставка</h3>
-              <p>
+              <p class="services-item-credit">
                 Залезть в долговую яму стало проще!<br>
                 Кредитные консультанты придут вам на помощь.
               </p>
@@ -273,17 +273,17 @@
     <div class="footer-top">
       <div class="container">
         <div class="footer-top-adress">
-          <a class="logo" href="#">
+          <a class="logo" href="index.html">
             <img width="138" height="23" src="./img/logo-footer.svg" alt="Логотип Техномарт">
           </a>
-          <p class="footer-contacts">г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8 <br>
-            +7 (812) 555-05-55</p>
+          <p class="footer-contacts">г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8</p>
+          <a href="#" class="footer-phone">+7 (812) 555-05-55</a>
         </div>
         <div class="footer-top-menu">
           <ul class="footer-menu">
             <li><a href="#">Компания</a></li>
             <li><a href="#">Новости</a></li>
-            <li><a href="#">Католог</a></li>
+            <li><a href="catalog.html">Каталог</a></li>
             <li><a href="#">Доставка</a></li>
             <li><a href="#">Контакты</a></li>
           </ul>
@@ -299,8 +299,8 @@
     <div class="footer-bottom">
       <div class="container">
         <div class="footer-bottom-copy">
-          <p>&copy; 2010-2019 Компания &laquo;Техномарт&raquo; <br>
-            Все права защищены</p>
+          <p>&copy; 2010-2019 Компания &laquo;Техномарт&raquo;<p>
+          <p>Все права защищены</p>
         </div>
         <div class="footer-bottom-social">
           <a class="social-button social-button-vk" href="#"><span class="visually-hidden">Вконтакте</span></a>
@@ -308,9 +308,9 @@
           <a class="social-button social-button-inst" href="#"><span class="visually-hidden">Инстаграм</span></a>
         </div>
         <div class="footer-bottom-feedback">
-          <p>Обратная связь: <br>
+          <p>Обратная связь:
             <a class="footer-yellow-name" href="#">mail@htmlacademy.ru</a></p>
-          <p>Разработано &#8212; <br>
+          <p>Разработано &#8212;
             <a class="footer-yellow-name" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
         </div>
       </div>
