Проект сделал, пока без ПП

--- a/catalog.html
+++ b/catalog.html
@@ -34,7 +34,6 @@
           <p class="contacts-address">г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8</p>
         </div>
         <div class="user">
-          <a href="#" class="user-icon user-icon-men"></a>
           <a href="#" class="user-name">Равшан Джамшутович</a>
           <a href="#" class="user-icon user-icon-logout"></a>
           <ul class="user-menu">
@@ -341,6 +340,7 @@
       <button class="button button-order">Продолжить покупки</button>
     </p>
   </section>
+  <script src="./js/javascript.js"></script>
 </body>
 
 </html>
