--- a/index.html
+++ b/index.html
@@ -176,25 +176,25 @@
             <img src="./img/manufacturers-bosch.jpg" alt="bosch" width="126" height="37">
           </a>
           <a href="#" class="manufacture-item">
-            <img src="./img/manufacturers-makita.jpg" alt="bosch" width="123" height="40">
+            <img src="./img/manufacturers-makita.jpg" alt="makita" width="123" height="40">
           </a>
           <a href="#" class="manufacture-item">
-            <img src="./img/manufacturers-de-walt.jpg" alt="bosch" width="146" height="44">
+            <img src="./img/manufacturers-de-walt.jpg" alt="de-walt" width="146" height="44">
           </a>
           <a href="#" class="manufacture-item">
-            <img src="./img/manufacturers-invalid-name.jpg" alt="bosch" width="200" height="88">
+            <img src="./img/manufacturers-invalid-name.jpg" alt="интерскол" width="200" height="88">
           </a>
           <a href="#" class="manufacture-item">
-            <img src="./img/manufacturers-hitachi.jpg" alt="bosch" width="169" height="31">
+            <img src="./img/manufacturers-hitachi.jpg" alt="hitachi" width="169" height="31">
           </a>
           <a href="#" class="manufacture-item">
-            <img src="./img/manufacturers-lg.jpg" alt="bosch" width="121" height="73">
+            <img src="./img/manufacturers-lg.jpg" alt="lg" width="121" height="73">
           </a>
           <a href="#" class="manufacture-item">
-            <img src="./img/manufacturers-aeg.jpg" alt="bosch" width="151" height="96">
+            <img src="./img/manufacturers-aeg.jpg" alt="aeg" width="151" height="96">
           </a>
           <a href="#" class="manufacture-item">
-            <img src="./img/manufacturers-metabo.jpg" alt="bosch" width="204" height="69">
+            <img src="./img/manufacturers-metabo.jpg" alt="metabo" width="204" height="69">
           </a>
         </div>
       </section>
@@ -209,9 +209,9 @@
         <div class="services-slider">
           <div class="services-control">
             <div class="services-boxshadow"></div>
-            <div class="services-control-item services-control-delivery">Доставка</div>
-            <div class="services-control-item services-control-warranty">Гарантия</div>
-            <div class="services-control-item services-control-credit">Кредит</div>
+            <div class="services-control-item services-control-active">Доставка</div>
+            <div class="services-control-item">Гарантия</div>
+            <div class="services-control-item">Кредит</div>
           </div>
           <ul class="services-list">
             <li class="services-item">
@@ -234,7 +234,7 @@
               </p>
             </li>
             <li class="services-item">
-              <h3>Доставка</h3>
+              <h3>Кредит</h3>
               <p class="services-item-credit">
                 Залезть в долговую яму стало проще!<br>
                 Кредитные консультанты придут вам на помощь.
@@ -247,9 +247,9 @@
     <div class="container company">
       <section class="company-description">
         <h2>Компания &laquo;Техномарт&raquo;</h2>
-        <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и
+        <p class="company-description-men">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и
           строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
-        <p>Мы можем доставить ваш товар в самые отдаленные точки России! <br>
+        <p class="company-description-delivery">Мы можем доставить ваш товар в самые отдаленные точки России!
           Техномарт работает со многими транспортными компнаиями:</p>
         <ul class="company-transport">
           <li>Деловые линии</li>
@@ -260,7 +260,7 @@
       </section>
       <section class="company-address">
         <h2>Контакты</h2>
-        <p>Вы можете забрать товары сами, <br>
+        <p>Вы можете забрать товары сами,
           заехав в наш офис:</p>
         <a class="company-address-map" href="https://www.google.com/maps/place/%D0%91%D0%BE%D0%BB%D1%8C%D1%88%D0%B0%D1%8F+%D0%9A%D0%BE%D0%BD%D1%8E%D1%88%D0%B5%D0%BD%D0%BD%D0%B0%D1%8F+%D1%83%D0%BB.,+19,+%D0%A1%D0%B0%D0%BD%D0%BA%D1%82-%D0%9F%D0%B5%D1%82%D0%B5%D1%80%D0%B1%D1%83%D1%80%D0%B3,+191186/@59.9387969,30.3208946,17z/data=!3m1!4b1!4m5!3m4!1s0x4696310fca5ba729:0xea9c53d4493c879f!8m2!3d59.9387942!4d30.3230833?hl=ru-RU">
           <img src="./img/5.jpg" width="300" height="160" alt="Адрес на карте">
@@ -342,6 +342,7 @@
       <button class="button button-map">Отправить</button>
     </p>
   </section>
+  <script src="./js/javascript.js"></script>
 </body>
 
 </html>
