--- a/catalog.html
+++ b/catalog.html
@@ -129,7 +129,7 @@
                 </li>
               </ul>
             </fieldset>
-            <button class="button filter-button" type=“submit”>Показать</button>
+            <button class="button filter-button" type="submit">Показать</button>
           </form>
         </section>
         <section class="catalog">
